--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.13",
+    "path": "^0.12.7",
     "serve-index": "^1.9.1"
   }
 }
