--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
